syntax = "proto3";

option java_multiple_files = true;
option java_package = "servertoclientservice";

package servertoclientservice;

service ServerToClientService {

  rpc writeUpdate(Pair) returns (Void);
  rpc read(Key) returns (Value);

}
message Pair {
  string key = 1;
  string value = 2;
}

message Key {
  string key = 1;
}

message Value {
  string value = 1;
}

message Void {
}